@@ -11,9 +11,13 @@ nits <- 2
 # run sca
 #====================================================================
 fit0 <-  sca(ple4, FLIndices(ple4.index))
+is(fit0, "a4aFit")
 
-# check that indices have attr biomass
+# check that indices have attr biomass, set to FALSE
 "FLIndexBiomass" %in%  names(attributes(index(fit0)[[1]]))
+!attr(index(fit0)[[1]], "FLIndexBiomass")
+
+# check that indices have attr range 
 "range" %in%  names(attributes(index(fit0)[[1]]))
 
 # check convergence info
@@ -73,13 +77,52 @@ all.equal(qmodel(pars(fit))[[1]]@Mod, formula("~s(age, k=5)"))
 #====================================================================
 # run a4aSCA
 #====================================================================
+
+# run
 fit0 <-  a4aSCA(ple4, FLIndices(ple4.index), qmodel=list(~s(age, k=4)))
-# check that indices have attr biomass
+is(fit0, "a4aFitSA")
+
+# check that indices have attr biomass, set to FALSE
 "FLIndexBiomass" %in%  names(attributes(index(fit0)[[1]]))
+!attr(index(fit0)[[1]], "FLIndexBiomass")
+
+# check that indices have attr range 
 "range" %in%  names(attributes(index(fit0)[[1]]))
 
 # check convergence info
 fitSumm(fit0)["convergence",]==0
+
+#--------------------------------------------------------------------
+# equal submodels check
+#--------------------------------------------------------------------
+
+# sca defaults
+fit0 <-  a4aSCA(ple4, ple4.indices, fit="MP")
+# when fit="MP" class is "a4aFit" instead of "a4aFitSA"
+!is(fit0, "a4aFitSA") 
+
+fit1 <-  sca(ple4, ple4.indices)
+# default is fit="MP" and class "a4aFit"
+!is(fit1, "a4aFitSA") 
+
+all.equal(fit0@fitSumm, fit1@fitSumm)
+all.equal(fit0@harvest, fit1@harvest)
+all.equal(fit0@stock.n, fit1@stock.n)
+all.equal(fit0@catch.n, fit1@catch.n)
+ 
+# a4aSCA defaults
+fit0 <-  a4aSCA(ple4, ple4.indices)
+# default fit is "assessment" class should be "a4aFitSA"
+is(fit0, "a4aFitSA") 
+
+# when fit="assessment" class is "a4aFitSA"
+fit1 <-  sca(ple4, ple4.indices, fit="assessment")
+is(fit1, "a4aFitSA") 
+
+all.equal(fit0@fitSumm, fit1@fitSumm)
+all.equal(fit0@harvest, fit1@harvest)
+all.equal(fit0@stock.n, fit1@stock.n)
+all.equal(fit0@catch.n, fit1@catch.n)
 
 #--------------------------------------------------------------------
 # iters
